@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1135 2010/01/13 17:02:10 martin Exp $
+# $Id: CHANGES,v 1.1136 2010/01/13 22:47:30 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.5.0 beta1 (????/??/??)
+ - (2010/01/14) Removed not needed tool scripts/sync_node.sh.
  - (2010/01/13) Added Search to dashboard.
  - (2010/01/06) Added dashboard widget for displaying external content via iframe.
  - (2009/12/31) Added cpan module for JSON support (version 2.16), removed JSON
